--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,13 @@
   <title>Sass Starter Pack</title>
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,700" rel="stylesheet">
+
+  <!-- Animate.css -->
+	<link rel="stylesheet" href="bower_components/animate.css/animate.css">
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 
