Feat: Add icomoon free fonts via bower

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 
   <!-- Animate.css -->
 	<link rel="stylesheet" href="bower_components/animate.css/animate.css">
+  <!-- Icomoon Icon Fonts-->
+	<link rel="stylesheet" href="bower_components/icomoon-bower/style.css">
 
   <link rel="stylesheet" href="css/style.css">
 </head>
