Feat: Add magnific popup via bower

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
   <!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="bower_components/icomoon-bower/style.css">
 
+  <!-- Magnific Popup -->
+	<link rel="stylesheet" href="bower_components/magnific-popup/dist/magnific-popup.css">
+
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 
