Feat: Add owl carousel via bower

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,11 @@
   <!-- Magnific Popup -->
 	<link rel="stylesheet" href="bower_components/magnific-popup/dist/magnific-popup.css">
 
+	<!-- Owl Carousel  -->
+	<link rel="stylesheet" href="bower_components/owl.carousel/dist/owl.carousel.css">
+	<link rel="stylesheet" href="bower_components/owl.carousel/dist/owl.theme.default.min.css">
+
+
 
   <link rel="stylesheet" href="css/style.css">
 </head>
